# cf1

./: .gitignore  README.md  phase4_llm_predictor.py  phase4_outputs.txt  run_phase1.py  run_phase2.py  run_phase3.py  tune_phase3.py
diffrec-project/: .gitignore  README.md  requirements.txt
diffrec-project/src/: __init__.py  data_loader.py  metrics.py
diffrec-project/src/baselines/: __init__.py
diffrec-project/src/diffusion/: __init__.py
diffrec-project/src/models/: __init__.py
lightgcn-project/: .gitignore  README.md  pyproject.toml  requirements.txt
lightgcn-project/docs/: architecture.md
lightgcn-project/results/tables/: ablation_ml100k.csv  comparison_ml100k.csv
lightgcn-project/scripts/: ablation_study.py  llm_baseline.py  llm_explainer.py  run_all_baselines.py  train_lightgcn.py  train_ml20m.py
lightgcn-project/src/lightgcn_project/: __init__.py
lightgcn-project/src/lightgcn_project/data/: __init__.py  data_loader.py
lightgcn-project/src/lightgcn_project/evaluation/: __init__.py  metrics.py
lightgcn-project/src/lightgcn_project/models/: __init__.py  bprmf.py  itemknn.py  lightgcn.py  mostpop.py
lightgcn-project/src/models/: bprmf.py  itemknn.py  lightgcn.py  mostpop.py
lightgcn-project/src/utils/: data_loader.py  metrics.py
results/: phase4_results.txt
src/: cf.py  config.py  data.py
